--- a/frontend/angular/angular.json
+++ b/frontend/angular/angular.json
@@ -165,7 +165,7 @@
                         ],
                         "assets": [
                             "src/assets",
-                            "src/faviconfd.ico"
+                            "src/bancosafra.ico"
                         ]
                     }
                 },
