end points working

--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 DB_HOST="localhost"
 DB_DATABASE="hackathonproject"
 DB_USER="postgres"
-DB_PASSWORD="154236789.vny1"
+DB_PASSWORD="Diegos775"
 DB_PORT="5432"
 PORT="8885"
 JSON_WEBTOKEN_SECRET="SAFRAPROJECTHACKATHON@220102103%%%%412aaa2e12Q@!@"
 JSON_WEBTOKEN_EXPIRES_IN="86400"
 JSON_WEBTOKEN_SALT="10"
-NODE_ENV="dev"1542
+NODE_ENV="dev"
