add schedule for send email

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,11 @@ JSON_WEBTOKEN_SECRET="SAFRAPROJECTHACKATHON@220102103%%%%412aaa2e12Q@!@"
 JSON_WEBTOKEN_EXPIRES_IN="86400"
 JSON_WEBTOKEN_SALT="10"
 NODE_ENV="dev"
+
+TEST=true
+
+MAIL_HOST = "google"
+MAIL_USER = "safraport1@gmail.com"
+MAIL_PASS = "123456.Teste"
+MAIL_SERVICE = "gmail"
+BASE_URL ="https://dsaprospectos.com.br:8885/"
