--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
@@ -14,6 +15,8 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.4",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3"
   },
   "scripts": {
